force-app/main/default/objects/WorkOrder/fields/Contact_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mobile_Number__c</fullName>
    <label>Contact Mobile Number</label>
    <type>Phone</type>
</CustomField>