force-app/main/default/objects/WorkOrder/fields/Contract_Information__c.field-meta.xml
<CustomField>
    <fullName>Contract_Information__c</fullName>
    <label>Contract Information</label>
    <length>64</length>
    <type>Text</type>
</CustomField>