force-app/main/default/objects/WorkOrder/fields/Credit_Card_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Amount__c</fullName>
    <label>Credit Card Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>