force-app/main/default/objects/WorkOrder/fields/Customer_Declined_to_Sign__c.field-meta.xml
<CustomField>
    <fullName>Customer_Declined_to_Sign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Declined to Sign</label>
    <type>Checkbox</type>
</CustomField>