force-app/main/default/objects/WorkOrder/fields/Money_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Money_Order_Amount__c</fullName>
    <label>Money Order Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>