force-app/main/default/objects/WorkOrder/fields/Money_Order_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Money_Order_Bank_Name__c</fullName>
    <label>Money Order Bank Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>