force-app/main/default/objects/WorkOrder/fields/Money_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Money_Order_Number__c</fullName>
    <label>Money Order Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>