force-app/main/default/objects/WorkOrder/fields/Process_Payments__c.field-meta.xml
<CustomField>
    <fullName>Process_Payments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Process Payments</label>
    <type>Checkbox</type>
</CustomField>