force-app/main/default/objects/WorkOrder/fields/Remaining_Balance__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Remaining Balance</label>
    <type>Checkbox</type>
</CustomField>