force-app/main/default/objects/WorkOrder/fields/Remaining_Balance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance_Notes__c</fullName>
    <label>Remaining Balance Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>