force-app/main/default/objects/WorkOrder/fields/Resolution_Code__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Code__c</fullName>
    <label>Resolution Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACD</fullName>
                <label>A/C Condemned</label>
            </value>
            <value>
                <fullName>ADM</fullName>
                <label>Administrative Use Only</label>
            </value>
            <value>
                <fullName>AFS</fullName>
                <label>Air Filter Sold</label>
            </value>
            <value>
                <fullName>ALO</fullName>
                <label>A/C Left Off</label>
            </value>
            <value>
                <fullName>AMS</fullName>
                <label>A/C Miscellaneous</label>
            </value>
            <value>
                <fullName>ANT</fullName>
                <label>A/C No Trouble Found</label>
            </value>
            <value>
                <fullName>AOP</fullName>
                <label>A/C Off Part Ordered</label>
            </value>
            <value>
                <fullName>API</fullName>
                <label>A/C Part Install</label>
            </value>
            <value>
                <fullName>ARP</fullName>
                <label>A/C Repair</label>
            </value>
            <value>
                <fullName>ATU</fullName>
                <label>A/C Tuned-up</label>
            </value>
            <value>
                <fullName>CCC</fullName>
                <label>Call Cancelled - Call Center</label>
            </value>
            <value>
                <fullName>CCT</fullName>
                <label>Call Cancelled - Tech at door</label>
            </value>
            <value>
                <fullName>CGI</fullName>
                <label>Could Not Get In</label>
            </value>
            <value>
                <fullName>CGP</fullName>
                <label>Could Not Get In Phoned</label>
            </value>
            <value>
                <fullName>COB</fullName>
                <label>CO Detector Battery Replaced</label>
            </value>
            <value>
                <fullName>COT</fullName>
                <label>CO Detector Tested</label>
            </value>
            <value>
                <fullName>CPE</fullName>
                <label>Call Previously Executed</label>
            </value>
            <value>
                <fullName>CTU</fullName>
                <label>Combo HH/AC Tuned-up</label>
            </value>
            <value>
                <fullName>EPO</fullName>
                <label>Equipment Part Ordered</label>
            </value>
            <value>
                <fullName>EUW</fullName>
                <label>Equipment Unworkable</label>
            </value>
            <value>
                <fullName>HCD</fullName>
                <label>HH Condemned</label>
            </value>
            <value>
                <fullName>HCL</fullName>
                <label>HH Clean</label>
            </value>
            <value>
                <fullName>HLO</fullName>
                <label>Heat Left Off</label>
            </value>
            <value>
                <fullName>HMS</fullName>
                <label>HH Miscellaneous</label>
            </value>
            <value>
                <fullName>HNE</fullName>
                <label>HH Not Enough Heat</label>
            </value>
            <value>
                <fullName>HNT</fullName>
                <label>HH No Trouble Found</label>
            </value>
            <value>
                <fullName>HOP</fullName>
                <label>Heat Off Part Ordered</label>
            </value>
            <value>
                <fullName>HPI</fullName>
                <label>HH Part Install</label>
            </value>
            <value>
                <fullName>HPP</fullName>
                <label>HH Plumbing Part Install</label>
            </value>
            <value>
                <fullName>HPR</fullName>
                <label>HH Plumbing Repair</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>