force-app/main/default/objects/WorkOrder/fields/Total_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Total_Adjustments__c</fullName>
    <label>Total Adjustments</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>