force-app/main/default/objects/WorkOrder/fields/Total_Service_Call__c.field-meta.xml
<CustomField>
    <fullName>Total_Service_Call__c</fullName>
    <label>Total Service Call</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>