force-app/main/default/objects/WorkOrder/fields/VEC__c.field-meta.xml
<CustomField>
    <fullName>VEC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>VEC</label>
    <type>Checkbox</type>
</CustomField>