force-app/main/default/objects/WorkOrder/fields/Wrap_Up__c.field-meta.xml
<CustomField>
    <fullName>Wrap_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wrap Up</label>
    <type>Checkbox</type>
</CustomField>