force-app/main/default/objects/WorkOrder/validationRules/Prevent_Changes_to_Completed_WorkOrders.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Changes_to_Completed_WorkOrders</fullName>
    <active>true</active>
    <description>This validation rule prevents users from changing completed Work Orders</description>
    <errorConditionFormula>AND (
NOT(ISNEW()),
ISPICKVAL(PRIORVALUE(Status),&quot;Completed&quot;)
)</errorConditionFormula>
    <errorMessage>This Work Order has been Completed and can no longer be updated</errorMessage>
</ValidationRule>